src/main/java/de/semuelle/homeautomation/parser/ideaalCombinedGrammarParser.java
package de.semuelle.homeautomation.parser;

// Generated from C:\Users\sebastian\ideaalCombinedGrammar.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ideaalCombinedGrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__43=1, T__42=2, T__41=3, T__40=4, T__39=5, T__38=6, T__37=7, T__36=8, 
		T__35=9, T__34=10, T__33=11, T__32=12, T__31=13, T__30=14, T__29=15, T__28=16, 
		T__27=17, T__26=18, T__25=19, T__24=20, T__23=21, T__22=22, T__21=23, 
		T__20=24, T__19=25, T__18=26, T__17=27, T__16=28, T__15=29, T__14=30, 
		T__13=31, T__12=32, T__11=33, T__10=34, T__9=35, T__8=36, T__7=37, T__6=38, 
		T__5=39, T__4=40, T__3=41, T__2=42, T__1=43, T__0=44, UND=45, ID=46, INT=47, 
		NEWLINE=48, WS=49;
	public static final String[] tokenNames = {
		"<INVALID>", "'Musik'", "'Lampen'", "'aus'", "'senken'", "'einschalten'", 
		"'Stelle'", "'noch'", "'den'", "'oben'", "'Prozent'", "'Schlafzimmer'", 
		"'im'", "'Ist'", "'das'", "'irgendwo'", "'alle'", "'runterfahren'", "'Rolladen'", 
		"'erh�hen'", "'Fenster'", "'Licht'", "'Sind'", "'lauter'", "'ausschalten'", 
		"'in der K�che'", "'Wohnzimmer'", "'Fahre'", "'um'", "'Lichter'", "'die'", 
		"'zu'", "'runter'", "'leiser'", "'Schliesse'", "'ein'", "'auf'", "'Rollaeden'", 
		"'hoch'", "'Bad'", "'stellen'", "'Schalte'", "'Senke'", "'an'", "'Badezimmer'", 
		"'und'", "ID", "INT", "NEWLINE", "WS"
	};
	public static final int
		RULE_testFile = 0, RULE_commandFile = 1, RULE_command = 2, RULE_subcommand = 3, 
		RULE_imperativeCommand = 4, RULE_aktor = 5, RULE_place = 6, RULE_value = 7, 
		RULE_valuedVerb = 8, RULE_verb = 9, RULE_imperative = 10, RULE_valuedImperative = 11, 
		RULE_imperativeValue = 12, RULE_queryFile = 13, RULE_query = 14, RULE_questionWord = 15, 
		RULE_queryValue = 16;
	public static final String[] ruleNames = {
		"testFile", "commandFile", "command", "subcommand", "imperativeCommand", 
		"aktor", "place", "value", "valuedVerb", "verb", "imperative", "valuedImperative", 
		"imperativeValue", "queryFile", "query", "questionWord", "queryValue"
	};

	@Override
	public String getGrammarFileName() { return "ideaalCombinedGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public ideaalCombinedGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TestFileContext extends ParserRuleContext {
		public CommandFileContext commandFile() {
			return getRuleContext(CommandFileContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ideaalCombinedGrammarParser.EOF, 0); }
		public QueryFileContext queryFile() {
			return getRuleContext(QueryFileContext.class,0);
		}
		public TestFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_testFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterTestFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitTestFile(this);
		}
	}

	public final TestFileContext testFile() throws RecognitionException {
		TestFileContext _localctx = new TestFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_testFile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); commandFile();
			setState(35); queryFile();
			setState(36); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandFileContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ideaalCombinedGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ideaalCombinedGrammarParser.NEWLINE, i);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public CommandFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commandFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterCommandFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitCommandFile(this);
		}
	}

	public final CommandFileContext commandFile() throws RecognitionException {
		CommandFileContext _localctx = new CommandFileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_commandFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 6) | (1L << 8) | (1L << 14) | (1L << 16) | (1L << 20) | (1L << 21) | (1L << 27) | (1L << 30) | (1L << 34) | (1L << 41) | (1L << 42))) != 0)) {
				{
				{
				setState(38); command();
				setState(40);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(39); match(NEWLINE);
					}
				}

				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public TerminalNode UND() { return getToken(ideaalCombinedGrammarParser.UND, 0); }
		public SubcommandContext subcommand(int i) {
			return getRuleContext(SubcommandContext.class,i);
		}
		public List<SubcommandContext> subcommand() {
			return getRuleContexts(SubcommandContext.class);
		}
		public ImperativeCommandContext imperativeCommand() {
			return getRuleContext(ImperativeCommandContext.class,0);
		}
		public VerbContext verb() {
			return getRuleContext(VerbContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_command);
		int _la;
		try {
			setState(55);
			switch (_input.LA(1)) {
			case 1:
			case 8:
			case 14:
			case 16:
			case 20:
			case 21:
			case 30:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(47); subcommand();
				setState(50);
				_la = _input.LA(1);
				if (_la==UND) {
					{
					setState(48); match(UND);
					setState(49); subcommand();
					}
				}

				setState(52); verb();
				}
				}
				break;
			case 6:
			case 27:
			case 34:
			case 41:
			case 42:
				enterOuterAlt(_localctx, 2);
				{
				setState(54); imperativeCommand();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubcommandContext extends ParserRuleContext {
		public AktorContext aktor() {
			return getRuleContext(AktorContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public VerbContext verb() {
			return getRuleContext(VerbContext.class,0);
		}
		public PlaceContext place() {
			return getRuleContext(PlaceContext.class,0);
		}
		public SubcommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subcommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterSubcommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitSubcommand(this);
		}
	}

	public final SubcommandContext subcommand() throws RecognitionException {
		SubcommandContext _localctx = new SubcommandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_subcommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(57); aktor();
			setState(59);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 12) | (1L << 15) | (1L << 25))) != 0)) {
				{
				setState(58); place();
				}
			}

			setState(65);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(62);
				_la = _input.LA(1);
				if (_la==28 || _la==36) {
					{
					setState(61); value();
					}
				}

				}
				break;

			case 2:
				{
				setState(64); verb();
				}
				break;
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImperativeCommandContext extends ParserRuleContext {
		public AktorContext aktor() {
			return getRuleContext(AktorContext.class,0);
		}
		public ValuedImperativeContext valuedImperative() {
			return getRuleContext(ValuedImperativeContext.class,0);
		}
		public ImperativeValueContext imperativeValue() {
			return getRuleContext(ImperativeValueContext.class,0);
		}
		public ImperativeContext imperative() {
			return getRuleContext(ImperativeContext.class,0);
		}
		public PlaceContext place() {
			return getRuleContext(PlaceContext.class,0);
		}
		public ImperativeCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imperativeCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterImperativeCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitImperativeCommand(this);
		}
	}

	public final ImperativeCommandContext imperativeCommand() throws RecognitionException {
		ImperativeCommandContext _localctx = new ImperativeCommandContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_imperativeCommand);
		int _la;
		try {
			setState(79);
			switch (_input.LA(1)) {
			case 34:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(67); imperative();
				setState(68); aktor();
				setState(70);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 12) | (1L << 15) | (1L << 25))) != 0)) {
					{
					setState(69); place();
					}
				}

				}
				}
				break;
			case 6:
			case 27:
			case 41:
			case 42:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(72); valuedImperative();
				setState(73); aktor();
				setState(75);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 12) | (1L << 15) | (1L << 25))) != 0)) {
					{
					setState(74); place();
					}
				}

				setState(77); imperativeValue();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AktorContext extends ParserRuleContext {
		public AktorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aktor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterAktor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitAktor(this);
		}
	}

	public final AktorContext aktor() throws RecognitionException {
		AktorContext _localctx = new AktorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_aktor);
		int _la;
		try {
			setState(101);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(82);
				_la = _input.LA(1);
				if (_la==14) {
					{
					setState(81); match(14);
					}
				}

				setState(84); match(21);
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(85);
				_la = _input.LA(1);
				if ( !(_la==16 || _la==30) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(86); match(29);
				}
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(87);
				_la = _input.LA(1);
				if ( !(_la==16 || _la==30) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(88); match(2);
				}
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(90);
				_la = _input.LA(1);
				if (_la==30) {
					{
					setState(89); match(30);
					}
				}

				setState(92); match(1);
				}
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				{
				setState(93);
				_la = _input.LA(1);
				if ( !(_la==16 || _la==30) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(94); match(37);
				}
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				{
				{
				setState(95); match(8);
				}
				setState(96); match(18);
				}
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				{
				setState(98);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 14) | (1L << 16) | (1L << 30))) != 0)) {
					{
					setState(97);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 14) | (1L << 16) | (1L << 30))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
				}

				setState(100); match(20);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlaceContext extends ParserRuleContext {
		public PlaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_place; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterPlace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitPlace(this);
		}
	}

	public final PlaceContext place() throws RecognitionException {
		PlaceContext _localctx = new PlaceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_place);
		int _la;
		try {
			setState(107);
			switch (_input.LA(1)) {
			case 12:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(103); match(12);
				setState(104);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 11) | (1L << 26) | (1L << 39) | (1L << 44))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 2);
				{
				setState(105); match(25);
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 3);
				{
				setState(106); match(15);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ideaalCombinedGrammarParser.INT, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(109);
			_la = _input.LA(1);
			if ( !(_la==28 || _la==36) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(110); match(INT);
			setState(111); match(10);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuedVerbContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ValuedVerbContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuedVerb; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterValuedVerb(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitValuedVerb(this);
		}
	}

	public final ValuedVerbContext valuedVerb() throws RecognitionException {
		ValuedVerbContext _localctx = new ValuedVerbContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_valuedVerb);
		try {
			setState(118);
			switch (_input.LA(1)) {
			case 28:
			case 36:
				enterOuterAlt(_localctx, 1);
				{
				setState(113); value();
				setState(114); match(4);
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 2);
				{
				setState(116); match(19);
				}
				break;
			case 40:
				enterOuterAlt(_localctx, 3);
				{
				setState(117); match(40);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VerbContext extends ParserRuleContext {
		public VerbContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_verb; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterVerb(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitVerb(this);
		}
	}

	public final VerbContext verb() throws RecognitionException {
		VerbContext _localctx = new VerbContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_verb);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 5) | (1L << 17) | (1L << 23) | (1L << 24) | (1L << 33) | (1L << 35) | (1L << 43))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImperativeContext extends ParserRuleContext {
		public ImperativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imperative; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterImperative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitImperative(this);
		}
	}

	public final ImperativeContext imperative() throws RecognitionException {
		ImperativeContext _localctx = new ImperativeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_imperative);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(34);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuedImperativeContext extends ParserRuleContext {
		public ValuedImperativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuedImperative; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterValuedImperative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitValuedImperative(this);
		}
	}

	public final ValuedImperativeContext valuedImperative() throws RecognitionException {
		ValuedImperativeContext _localctx = new ValuedImperativeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_valuedImperative);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 6) | (1L << 27) | (1L << 41) | (1L << 42))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImperativeValueContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ImperativeValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imperativeValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterImperativeValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitImperativeValue(this);
		}
	}

	public final ImperativeValueContext imperativeValue() throws RecognitionException {
		ImperativeValueContext _localctx = new ImperativeValueContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_imperativeValue);
		try {
			setState(130);
			switch (_input.LA(1)) {
			case 28:
			case 36:
				enterOuterAlt(_localctx, 1);
				{
				setState(126); value();
				}
				break;
			case 43:
				enterOuterAlt(_localctx, 2);
				{
				setState(127); match(43);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(128); match(3);
				}
				break;
			case 32:
				enterOuterAlt(_localctx, 4);
				{
				setState(129); match(32);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryFileContext extends ParserRuleContext {
		public List<QueryContext> query() {
			return getRuleContexts(QueryContext.class);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ideaalCombinedGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ideaalCombinedGrammarParser.NEWLINE, i);
		}
		public QueryContext query(int i) {
			return getRuleContext(QueryContext.class,i);
		}
		public QueryFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterQueryFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitQueryFile(this);
		}
	}

	public final QueryFileContext queryFile() throws RecognitionException {
		QueryFileContext _localctx = new QueryFileContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_queryFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==13 || _la==22) {
				{
				{
				setState(132); query();
				setState(134);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(133); match(NEWLINE);
					}
				}

				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public AktorContext aktor() {
			return getRuleContext(AktorContext.class,0);
		}
		public QueryValueContext queryValue() {
			return getRuleContext(QueryValueContext.class,0);
		}
		public QuestionWordContext questionWord() {
			return getRuleContext(QuestionWordContext.class,0);
		}
		public PlaceContext place() {
			return getRuleContext(PlaceContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ideaalCombinedGrammarListener ) ((ideaalCombinedGrammarListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_query);
		int _la;
		try {
			setState(165);
			switch ( getInterpreter().adaptivePredict(_input,24,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(141); questionWord();
				setState(143);
				_la = _input.LA(1);
				if (_la==7) {
					{
					setState(142); match(7);
					}
				}

				setState(145); aktor();
				setState(147);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 12) | (1L << 15) | (1L << 25))) != 0)) {
					{
					setState(146); place();
					}
				}

				setState(150);
				_la = _input.LA(1);
				if (_la==7) {
					{
					setState(149); match(7);
					}
				}

				setState(152); queryValue();
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(154); questionWord();
				setState(155); place();
				setState(157);
				_la = _input.LA(1);
				if (_la==7) {
					{
					setState(156); match(7);
					}
				}

				setState(159); aktor();
				setState(161);
				_la = _input.LA(1);
				if (_la==7) {
					{
					setState(160); match(7);
					}
				}

				setState(163); queryValue();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
